# thsr-ticket-monitor

./: .env.example  .gitignore  GitHub_上傳指南.md  LINE_Bot_API_設定說明.md  LINE_設定說明.md  README.md  main.py  pyproject.toml  test_anti_detection.py  test_auto_captcha.py  test_blocking_detection.py  test_corrected_form.py  test_date_setting.py  test_debug_connection.py  test_enhanced_anti_detection.py  test_line_bot.py  test_selenium.py  test_single_run.py  test_success_logic.py  test_with_cookie.py  使用指南.md  設定完成通知.md
